docs: add more details and remove unused parts